[gd_scene load_steps=45 format=2]

[ext_resource path="res://sprite/background_jam.jpg" type="Texture" id=1]
[ext_resource path="res://sprite/dancer.png" type="Texture" id=2]
[ext_resource path="res://start_dance.gd" type="Script" id=3]
[ext_resource path="res://sprite/fire_anim.png" type="Texture" id=4]
[ext_resource path="res://timer.gd" type="Script" id=5]
[ext_resource path="res://Fire.gd" type="Script" id=6]
[ext_resource path="res://audio/rap_back.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/reggae_back.wav" type="AudioStream" id=9]
[ext_resource path="res://audio/electro_back.wav" type="AudioStream" id=10]
[ext_resource path="res://audio/piano_back.wav" type="AudioStream" id=11]

[sub_resource type="Animation" id=1]
resource_name = "dance_anim"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 64 ]
}

[sub_resource type="Animation" id=2]
resource_name = "dancing"
length = 6.0

[sub_resource type="Animation" id=3]
resource_name = "dancing_anim"
length = 30.0
step = 0.5

[sub_resource type="Animation" id=4]
resource_name = "dance_anim"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 64 ]
}

[sub_resource type="Animation" id=5]
resource_name = "dancing"
length = 6.0

[sub_resource type="Animation" id=6]
resource_name = "dancing_anim"
length = 30.0
step = 0.5

[sub_resource type="Animation" id=7]
resource_name = "dance_anim"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 64 ]
}

[sub_resource type="Animation" id=8]
resource_name = "dancing"
length = 6.0

[sub_resource type="Animation" id=9]
resource_name = "dancing_anim"
length = 30.0
step = 0.5

[sub_resource type="Animation" id=10]
resource_name = "dance_anim"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 64 ]
}

[sub_resource type="Animation" id=11]
resource_name = "dancing"
length = 6.0

[sub_resource type="Animation" id=12]
resource_name = "dancing_anim"
length = 30.0
step = 0.5

[sub_resource type="Animation" id=13]
resource_name = "dance_anim"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 64 ]
}

[sub_resource type="Animation" id=14]
resource_name = "dancing"
length = 6.0

[sub_resource type="Animation" id=15]
resource_name = "dancing_anim"
length = 30.0
step = 0.5

[sub_resource type="Animation" id=16]
resource_name = "dance_anim"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 64 ]
}

[sub_resource type="Animation" id=17]
resource_name = "dancing"
length = 6.0

[sub_resource type="Animation" id=18]
resource_name = "dancing_anim"
length = 30.0
step = 0.5

[sub_resource type="Animation" id=19]
resource_name = "dance_anim"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 64 ]
}

[sub_resource type="Animation" id=20]
resource_name = "dancing"
length = 6.0

[sub_resource type="Animation" id=21]
resource_name = "dancing_anim"
length = 30.0
step = 0.5

[sub_resource type="Animation" id=22]
resource_name = "dance_anim"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 64 ]
}

[sub_resource type="Animation" id=23]
resource_name = "dancing"
length = 6.0

[sub_resource type="Animation" id=24]
resource_name = "dancing_anim"
length = 30.0
step = 0.5

[sub_resource type="Animation" id=25]
resource_name = "dance_anim"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 64 ]
}

[sub_resource type="Animation" id=26]
resource_name = "dancing"
length = 6.0

[sub_resource type="Animation" id=27]
resource_name = "dancing_anim"
length = 30.0
step = 0.5

[sub_resource type="Animation" id=28]
resource_name = "dance_anim"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 64 ]
}

[sub_resource type="Animation" id=29]
resource_name = "dancing"
length = 6.0

[sub_resource type="Animation" id=30]
resource_name = "dancing_anim"
length = 30.0
step = 0.5

[sub_resource type="Animation" id=31]
resource_name = "fires"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 1, 15 ]
}

[sub_resource type="Animation" id=32]
resource_name = "put_fire"
length = 6.0
step = 0.2

[sub_resource type="Animation" id=33]
resource_name = "fires"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 1, 15 ]
}

[sub_resource type="Animation" id=34]
resource_name = "put_fire"
length = 6.0
step = 0.2

[node name="DanceNode" type="Node2D"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 513.395, 302.533 )
scale = Vector2( 1.99976, 1.75902 )
texture = ExtResource( 1 )

[node name="dancer" type="Sprite" parent="."]
position = Vector2( 371.501, 403.652 )
scale = Vector2( 0.888285, 0.905509 )
texture = ExtResource( 2 )
vframes = 10
hframes = 8
frame = 64
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="dancer"]
anims/dance_anim = SubResource( 1 )
anims/dancing = SubResource( 2 )
anims/dancing_anim = SubResource( 3 )

[node name="dancer2" type="Sprite" parent="."]
position = Vector2( 843.182, 335.751 )
scale = Vector2( 0.356283, 0.429884 )
texture = ExtResource( 2 )
vframes = 10
hframes = 8
frame = 64
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="dancer2"]
anims/dance_anim = SubResource( 4 )
anims/dancing = SubResource( 5 )
anims/dancing_anim = SubResource( 6 )

[node name="dancer3" type="Sprite" parent="."]
position = Vector2( 143.726, 323.738 )
scale = Vector2( 0.356283, 0.429884 )
texture = ExtResource( 2 )
vframes = 10
hframes = 8
frame = 64
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="dancer3"]
anims/dance_anim = SubResource( 7 )
anims/dancing = SubResource( 8 )
anims/dancing_anim = SubResource( 9 )

[node name="dancer4" type="Sprite" parent="."]
position = Vector2( 604.245, 341.091 )
scale = Vector2( 0.356283, 0.429884 )
texture = ExtResource( 2 )
vframes = 10
hframes = 8
frame = 64
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="dancer4"]
anims/dance_anim = SubResource( 10 )
anims/dancing = SubResource( 11 )
anims/dancing_anim = SubResource( 12 )

[node name="dancer5" type="Sprite" parent="."]
position = Vector2( 445.4, 339.756 )
scale = Vector2( 0.356283, 0.429884 )
texture = ExtResource( 2 )
vframes = 10
hframes = 8
frame = 64
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="dancer5"]
anims/dance_anim = SubResource( 13 )
anims/dancing = SubResource( 14 )
anims/dancing_anim = SubResource( 15 )

[node name="dancer6" type="Sprite" parent="."]
position = Vector2( 777.775, 425.853 )
scale = Vector2( 1.23, 1.45709 )
texture = ExtResource( 2 )
vframes = 10
hframes = 8
frame = 64
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="dancer6"]
anims/dance_anim = SubResource( 16 )
anims/dancing = SubResource( 17 )
anims/dancing_anim = SubResource( 18 )

[node name="dancer7" type="Sprite" parent="."]
position = Vector2( 68.9749, 427.188 )
scale = Vector2( 1.23, 1.45709 )
texture = ExtResource( 2 )
vframes = 10
hframes = 8
frame = 64
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="dancer7"]
anims/dance_anim = SubResource( 19 )
anims/dancing = SubResource( 20 )
anims/dancing_anim = SubResource( 21 )

[node name="dancer8" type="Sprite" parent="."]
position = Vector2( 968.657, 383.138 )
scale = Vector2( 0.708194, 0.747952 )
texture = ExtResource( 2 )
vframes = 10
hframes = 8
frame = 64
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="dancer8"]
anims/dance_anim = SubResource( 22 )
anims/dancing = SubResource( 23 )
anims/dancing_anim = SubResource( 24 )

[node name="dancer9" type="Sprite" parent="."]
position = Vector2( 249.178, 369.122 )
scale = Vector2( 0.647519, 0.669739 )
texture = ExtResource( 2 )
vframes = 10
hframes = 8
frame = 64
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="dancer9"]
anims/dance_anim = SubResource( 25 )
anims/dancing = SubResource( 26 )
anims/dancing_anim = SubResource( 27 )

[node name="dancer10" type="Sprite" parent="."]
position = Vector2( 676.327, 379.801 )
scale = Vector2( 0.647519, 0.669739 )
texture = ExtResource( 2 )
vframes = 10
hframes = 8
frame = 64
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="dancer10"]
anims/dance_anim = SubResource( 28 )
anims/dancing = SubResource( 29 )
anims/dancing_anim = SubResource( 30 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 428.852
margin_top = 161.432
margin_right = 541.852
margin_bottom = 201.432
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Fire" type="Sprite" parent="."]
position = Vector2( 321.28, 284.742 )
texture = ExtResource( 4 )
vframes = 4
hframes = 4
frame = 15
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fire"]
anims/fires = SubResource( 31 )
anims/put_fire = SubResource( 32 )

[node name="Fire2" type="Sprite" parent="."]
position = Vector2( 643.555, 283.553 )
texture = ExtResource( 4 )
vframes = 4
hframes = 4
frame = 15
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fire2"]
anims/fires = SubResource( 33 )
anims/put_fire = SubResource( 34 )

[node name="AudioBack" type="Node" parent="."]

[node name="Electro_back" type="AudioStreamPlayer2D" parent="AudioBack"]
stream = ExtResource( 10 )

[node name="Piano_back" type="AudioStreamPlayer2D" parent="AudioBack"]
stream = ExtResource( 11 )

[node name="Reggae_back" type="AudioStreamPlayer2D" parent="AudioBack"]
stream = ExtResource( 9 )

[node name="Rap_back" type="AudioStreamPlayer2D" parent="AudioBack"]
stream = ExtResource( 8 )

[node name="AudioSample" type="Node" parent="."]

[node name="Reggae_sample" type="AudioStreamPlayer2D" parent="AudioSample"]

[node name="Rap_sample" type="AudioStreamPlayer2D" parent="AudioSample"]

[node name="Void_sample" type="AudioStreamPlayer2D" parent="AudioSample"]
[connection signal="timeout" from="Timer" to="RichTextLabel" method="_on_Timer_timeout"]
